# budgeteer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  biome.json  index.html  package.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml  web-ci.yml
.streamlit/: config.toml
budgeteer/: app.py  charts.py  engine.py  ingest.py  models.py  ods_etl.py  odswriter.py
scripts/: create_template.py
src/: App.test.tsx  App.tsx  charts.test.ts  charts.ts  dates.ts  engine.test.ts  engine.ts  google.d.ts  index.css  main.tsx  models.test.ts  models.ts  storage.test.ts  storage.ts  theme.tsx
src/components/: Dashboard.tsx  PlotlyChart.tsx
src/sources/: googleAuth.ts  googlePicker.ts  googleSheets.test.ts  googleSheets.ts
src/test/: setup.ts
tests/: test_charts.py  test_engine.py  test_forecast.py  test_models.py
web/: .env.example  knip.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/.husky/: pre-commit
web/src/: App.test.tsx  App.tsx  charts.ts  dates.test.ts  engine.test.ts  engine.ts  format.test.ts  format.ts  google.d.ts  index.css  ingest.test.ts  ingest.ts  main.tsx  plotly.d.ts  storage.ts
web/src/components/: Dashboard.tsx  PlotlyChart.tsx  SheetPicker.tsx
web/src/sources/: googleAuth.test.ts  googleAuth.ts  googlePicker.ts  googleSheets.ts  odsUpload.test.ts  odsUpload.ts  sheetSchema.ts
