[project]
name = "budgeteer"
version = "0.1.0"
description = "Local financial forecasting with 18-36 month liquidity projections"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "odfpy>=1.4.1",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
