[project]
name = "budgeteer"
version = "0.1.0"
description = "Local financial forecasting with 18-36 month liquidity projections"
readme = "README.md"
requires-python = ">=3.11"
# Rendering moved to the client-side SPA in web/. The remaining Python is the
# Phase-2 reference oracle (engine/ingest/models) and the ODS->Sheets migration
# tooling (ods_etl), so streamlit/plotly are no longer needed.
dependencies = [
    "odfpy>=1.4.1",
    "pandas>=3.0.2",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
